--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -50,13 +50,15 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0"
+    "com.unity.modules.xr": "1.0.0",
+    "com.dbrizov.naughtyattributes": "2.1.4"
   },
   "scopedRegistries": [
     {
       "name": "package.openupm.com",
       "url": "https://package.openupm.com",
       "scopes": [
+        "com.dbrizov.naughtyattributes",
         "com.hecomi.uwindowcapture",
         "com.openupm",
         "jp.keijiro.osc-jack"
