--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -22,6 +22,7 @@
     "com.unity.visualscripting": "1.7.8",
     "com.unity.xr.legacyinputhelpers": "2.1.10",
     "jp.keijiro.osc-jack": "2.0.0",
+    "org.plunderludics.unityhawk": "file:F:/pludics/unity-hawk/Packages/org.plunderludics.UnityHawk",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
