--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -63,6 +63,7 @@
       "url": "https://package.openupm.com",
       "scopes": [
         "com.dbrizov.naughtyattributes",
+        "com.github-glitchenzo.nugetforunity",
         "com.hecomi.uwindowcapture",
         "com.openupm",
         "com.unity-atoms.unity-atoms-base-atoms",
