--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -27,7 +27,7 @@
     "com.unity.visualscripting": "1.9.1",
     "com.unity.xr.legacyinputhelpers": "2.1.10",
     "jp.keijiro.osc-jack": "2.0.0",
-    "org.plunderludics.lib": "file:C:/Users/gusta/Desktop/art/plunderludics/lib/Packages/org.plunderludics.lib",
+    "org.plunderludics.lib": "file:../../lib/Packages/org.plunderludics.lib",
     "org.plunderludics.unityhawk": "file:../../unity-hawk/Packages/org.plunderludics.UnityHawk",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
