some new marios

--- a/Assets/16 marios 2/17. mario for Kenji Ino/config-slow.ini
+++ b/Assets/16 marios 2/17. mario for Kenji Ino/config-slow.ini
@@ -1367,7 +1367,7 @@
   "N64UseCircularAnalogConstraint": true,
   "FrameProgressDelayMs": 500,
   "FrameSkip": 4,
-  "SpeedPercent": 50,
+  "SpeedPercent": 20,
   "SpeedPercentAlternate": 400,
   "ClockThrottle": true,
   "Unthrottled": false,
@@ -3092,7 +3092,7 @@
   "MergeLAndRModifierKeys": true,
   "OSDMessageDuration": 2,
   "RecentCores": [
-    "Ares64",
+    "Mupen64Plus",
     "Mupen64Plus",
     "Mupen64Plus",
     "Mupen64Plus",
